--- a/CustomAttributesApp/CustomAttributesApp/CustomAttributesApp.csproj
+++ b/CustomAttributesApp/CustomAttributesApp/CustomAttributesApp.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{A0A942E2-0690-42A8-90EC-0302B6FDB8B0}</ProjectGuid>
+    <ProjectGuid>{724C6926-FB8B-431A-8C4A-C8FEF5E52A17}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>OverloadingApp</RootNamespace>
-    <AssemblyName>ConsoleApplication1</AssemblyName>
+    <RootNamespace>CustomAttributesApp</RootNamespace>
+    <AssemblyName>CustomAttributesApp</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,9 +41,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccountInfo.cs" />
+    <Compile Include="DevInfo.cs" />
+    <Compile Include="LogDetails.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SimpleClass.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
